# python-custom-logging

./: .gitignore  MANIFEST.in  README.md  logger.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/custom_logging/: __init__.py  custom_logging.py  default_settings.yaml
src/log_formatter/: __init__.py  log_formatter.py
src/module0/: log_formatter.py
tests/: test_custom_logging.py  test_log_formatter.py  test_settings.yaml
