[project]
name = "custom_logging"
description = "A module to simplify logging setup in Python"
dynamic = ["version"]

readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {email = "matthew@davidson.engineering"},
  {name = "Matthew Davidson"}
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
   "PyYAML==6.0.1", 
]

[tool.setuptools]
include-package-data = true # true by default

[tool.setuptools.dynamic]
version = {attr = "custom_logging.__version__"}

[project.optional-dependencies]
test = [
  "pytest >= 7.4.3",
]

# Include non-python files located in src/package_name in the distribution
[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
repository = "https://github.com/davidson-engineering/python-custom-logging"
